<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person_compile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <RelativeLayout
        android:id="@+id/rl_headBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/mainblue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">



        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="个人中心"
            android:textColor="#ffffff"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="退出"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_alignParentStart="true"
            android:text="@string/head_pic" />

        <ImageView
            android:id="@+id/rw_head"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_description"
            android:layout_toStartOf="@+id/iv_right0"
            android:src="@drawable/splash0" />

        <ImageView
            android:id="@+id/iv_right0"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/img_description"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_userName"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_alignParentStart="true"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/tv_userName"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_right1"
            />

        <ImageView
            android:id="@+id/iv_right1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_description"
            android:src="@mipmap/ic_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_alignParentStart="true"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tv_phoneNum"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_right2"
            />

        <ImageView
            android:id="@+id/iv_right2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_description"
            android:src="@mipmap/ic_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_alignParentStart="true"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_right3"
            />

        <ImageView
            android:id="@+id/iv_right3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_description"
            android:src="@mipmap/ic_right" />
    </RelativeLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/view_shape"
        android:text="完成"
        android:textColor="@color/ivory"
        android:textSize="18sp" />
</LinearLayout>
